// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input it renders 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: #001833;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  font-size: 16px;
  border-radius: 12px;
}

.c1::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c1::-moz-placeholder {
  color: #4f6f8f;
}

.c1:-ms-input-placeholder {
  color: #4f6f8f;
}

.c1::placeholder {
  color: #4f6f8f;
}

.c1::-ms-clear {
  display: none;
}

.c1:disabled,
.c1:-moz-read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1:disabled,
.c1:read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <input
    className="c1"
    fontSize={
      [
        2,
        null,
        1,
      ]
    }
    id="fake-test-id"
    size="lg"
  />
</div>
`;

exports[`Input it renders an input element with a really large padding and margin 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: #001833;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  padding: 32px;
  margin: 32px;
  font-size: 16px;
  border-radius: 12px;
}

.c1::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c1::-moz-placeholder {
  color: #4f6f8f;
}

.c1:-ms-input-placeholder {
  color: #4f6f8f;
}

.c1::placeholder {
  color: #4f6f8f;
}

.c1::-ms-clear {
  display: none;
}

.c1:disabled,
.c1:-moz-read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1:disabled,
.c1:read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <input
    className="c1"
    fontSize={
      [
        2,
        null,
        1,
      ]
    }
    id="fake-test-id"
    size="lg"
  />
</div>
`;

exports[`Input it renders an input element with a red border with a color prop is passed 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: #001833;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c00;
  font-size: 16px;
  border-radius: 12px;
}

.c1::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c1::-moz-placeholder {
  color: #4f6f8f;
}

.c1:-ms-input-placeholder {
  color: #4f6f8f;
}

.c1::placeholder {
  color: #4f6f8f;
}

.c1::-ms-clear {
  display: none;
}

.c1:disabled,
.c1:-moz-read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1:disabled,
.c1:read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1:focus {
  outline: 0;
  border-color: #c00;
  box-shadow: 0 0 0 2px #c00;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <input
    className="c1"
    color="red"
    fontSize={
      [
        2,
        null,
        1,
      ]
    }
    id="fake-test-id"
    size="lg"
  />
</div>
`;

exports[`Input it renders an input element with large text 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: #001833;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  font-size: 24px;
  border-radius: 12px;
}

.c1::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c1::-moz-placeholder {
  color: #4f6f8f;
}

.c1:-ms-input-placeholder {
  color: #4f6f8f;
}

.c1::placeholder {
  color: #4f6f8f;
}

.c1::-ms-clear {
  display: none;
}

.c1:disabled,
.c1:-moz-read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1:disabled,
.c1:read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

<div
  className="c0"
>
  <input
    className="c1"
    fontSize={4}
    id="fake-test-id"
    size="lg"
  />
</div>
`;
